# qs-mps

./: .gitignore  CV_image.py  Ising_time_evolution.py  README.md  TEBD_Ising_L_30_trott_500_h_ev_0.4_chi_2-4-16-32-64-128.out  analytical_formulas_TFIC.py  checks.py  direct_compression.py  environment.yml  exact_vs_mps.py  mps_class_v9.py  new_test.py  new_variational.py  pyproject.toml  results\fidelity_data\fidelity_L_9_delta_0.1_h_ev_0.3  results\mag_data\magnetization_exact_loc_L_9_delta_0.1_h_ev_0.3  results\mag_data\magnetization_exact_tot_L_9_delta_0.1_h_ev_0.3  results\mag_data\magnetization_mps_loc_L_9_delta_0.1_h_ev_0.3  results\mag_data\magnetization_mps_tot_L_9_delta_0.1_h_ev_0.3  setup.py  utils.py  var_algorithm_check.py  var_mps.ipynb  variational_compression.py  variational_compression_different_chi.py  variational_compression_different_delta.py  variational_compression_example.ipynb  variational_compression_example.py
src/mps/: Ising_gs_and_time_ev.py  __init__.py  analytical_formulas_TFIC.py  checks.py  exact_Ising_ground_state_and_time_evolution.py  mps_class.py  test_comparison_maricarmen.py  utils.py  var_algorithm_check.py  variational_compression_different_chi.py  variational_compression_different_delta.py  visualization_time_evolution.py  visualization_time_evolution_different_chi.py  visualization_time_evolution_different_delta.py
src/qs-mps/: utils.py  variational_compression_different_chi.py
src/qs_mps/: .mps_class.py.swp  Ising_gs_and_time_ev.py  TensorMultiplier.py  copy_tensors.py  dmrg_runner.py  (+17 more)
tests/: test_rdms.py  timeout_testing.py
(+148 files in other folders)
